DE6880-profile-scroll 	- Fixes missing scroll on mobile

--- a/src/components/shared-header/profile-nav/profile-nav.scss
+++ b/src/components/shared-header/profile-nav/profile-nav.scss
@@ -5,8 +5,8 @@
   background-color: $cr-black;
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 100%;
-  max-height: 800px;
+  height: auto;
+  max-height: 100vh;
   left: 0;
   overflow-y: scroll;
   position: fixed;
@@ -49,7 +49,7 @@
     width: 100%;
     z-index: -1;
 
-    padding: 0;
+    padding-bottom: 125px;
   }
 
   .profile-nav-img {
